(experience section) fill svg circle on hover

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         <h1 class="page-title">EXPERIENCE</h1>
 
-        <div class="exp-container">
+        <div class="edu-container">
             <h2 class="sub-title">-EDUCATION-</h2>
 
             <!-- Experience Container-->
@@ -283,13 +283,13 @@
                         <line x1="0" y1="0" x2= "100%" y2= "0" stroke="#2C3F50" stroke-width="10px"/>
                     </svg>
                 </span>
-                <span class="work-svg-circle-float side-circle left-circle">
-                    <svg class="work-svg-circle">
+                <span class="edu-svg-circle-float side-circle left-circle">
+                    <svg class="edu-svg-circle">
                         <circle cx="10px" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
-                <span class="work-svg-circle-float side-circle right-circle">
-                    <svg class="work-svg-circle">
+                <span class="edu-svg-circle-float side-circle right-circle">
+                    <svg class="edu-svg-circle">
                         <circle cx="10" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
@@ -304,9 +304,9 @@
                             <img src="Img/faculty1.png" alt="Faculty 1 Logo">
 
                             <div class="second-container">
-                                <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                <span class="edu-svg-circle-float">
+                                    <svg class="edu-svg-circle">
+                                        <circle class="mid1" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -323,9 +323,9 @@
                             <img src="Img/faculty2.png" alt="Faculty 2 Logo">
 
                             <div class="second-container">
-                                <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                <span class="edu-svg-circle-float">
+                                    <svg class="edu-svg-circle">
+                                        <circle class="mid2" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -342,9 +342,9 @@
                             <img src="Img/faculty3.png" alt="Faculty 3 Logo">
 
                             <div class="second-container">
-                                <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                <span class="edu-svg-circle-float">
+                                    <svg class="edu-svg-circle">
+                                        <circle class="mid3" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -399,8 +399,8 @@
 
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                    <svg class="work-svg-circle mid4">
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -418,8 +418,8 @@
 
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                    <svg class="work-svg-circle mid5">
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -437,8 +437,8 @@
 
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
-                                    <svg class="work-svg-circle">
-                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
+                                    <svg class="work-svg-circle mid6">
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -454,7 +454,7 @@
         </div>
 
         <!-- Text display -->
-        <section class="text-container">
+        <section class="experience-description-container">
         </section>
 
     </section>
