fixed menu color on waypoints

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <nav class="top-nav blend">
+    <nav class="top-nav">
         <ul class="top-nav-ul">
             <li><a href="#homeID">HOME</a></li>
             <li><a href="#aboutID">ABOUT</a></li>
@@ -22,10 +22,10 @@
         <hr class="nav-hr">
     </nav>
 
-    <nav class="left-side-nav blend-side-nav">
+    <nav class="left-side-nav">
         <div class="dot-nav">
             <ul>
-                <li><a href="#homeID">HOME</a></li>
+                <li><a href="#homeID"><span class="left-side-nav-text">HOME</span></a></li>
                 <li><a href="#aboutID">ABOUT</a></li>
                 <li><a href="#portfolioID">PORTFOLIO</a></li>
                 <li><a href="#skillsID">SKILLS</a></li>
