(experience section) added onclick() events

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <ul>
                     <!-- Faculty 1-->
                     <li>
-                        <div class="content-container">
+                        <div id="SSC" class="content-container">
 
                             <img src="Img/faculty1.png" alt="Faculty 1 Logo">
 
@@ -309,8 +309,7 @@
                                         <circle class="mid1" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
-                                <p class="big">Adobe</p>
-                                <p class="small">Feb 2011 - Jun 2012</p>
+                                <p class="big">SSC-2009</p>
                             </div>
                         </div>
                     </li>
@@ -318,7 +317,7 @@
 
                     <!-- Faculty 2-->
                     <li>
-                        <div class="content-container">
+                        <div id="HSC" class="content-container">
 
                             <img src="Img/faculty2.png" alt="Faculty 2 Logo">
 
@@ -328,8 +327,7 @@
                                         <circle class="mid2" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
-                                <p class="big">Adobe</p>
-                                <p class="small">Feb 2011 - Jun 2012</p>
+                                <p class="big">HSC-2011</p>
                             </div>
                         </div>
                     </li>
@@ -337,7 +335,7 @@
 
                     <!-- Faculty 3-->
                     <li>
-                        <div class="content-container">
+                        <div id="Present" class="content-container">
 
                             <img src="Img/faculty3.png" alt="Faculty 3 Logo">
 
@@ -347,8 +345,7 @@
                                         <circle class="mid3" cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
-                                <p class="big">Adobe</p>
-                                <p class="small">Feb 2011 - Jun 2012</p>
+                                <p class="big">2011-Present</p>
                             </div>
                         </div>
                     </li>
@@ -363,7 +360,7 @@
 
 
 
-        <div class="work-container">
+        <section class="work-container">
 
             <h2 class="sub-title">-WORK-</h2>
 
@@ -393,7 +390,7 @@
                 <ul>
                     <!-- Company 1-->
                     <li>
-                        <div class="content-container">
+                        <div id="Adobe" class="content-container">
 
                             <img src="Img/adobe_logo.png" alt="Adobe Logo" height="64" width="64">
 
@@ -412,7 +409,7 @@
 
                     <!-- Company 2-->
                     <li>
-                        <div class="content-container">
+                        <div id="Microsoft" class="content-container">
 
                             <img src="Img/microsoft_logo.png" alt="Microsoft Logo" height="90" width="90">
 
@@ -422,7 +419,7 @@
                                         <circle cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
-                                <p class="big">Adobe</p>
+                                <p class="big">Microsoft</p>
                                 <p class="small">Feb 2011 - Jun 2012</p>
                             </div>
                         </div>
@@ -431,7 +428,7 @@
 
                     <!-- Company 3-->
                     <li>
-                        <div class="content-container">
+                        <div id="Endava" class="content-container">
 
                             <img src="Img/endava-logo2.png" alt="Endava Logo">
 
@@ -441,7 +438,7 @@
                                         <circle cx="10" cy="10px" r="8px" stroke-width="3px" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
-                                <p class="big">Adobe</p>
+                                <p class="big">Endava</p>
                                 <p class="small">Feb 2011 - Jun 2012</p>
                             </div>
                         </div>
@@ -451,10 +448,52 @@
                 <!-- /List of companies-->
             </div>
             <!-- /WORK Container-->
-        </div>
+        </section>
 
         <!-- Text display -->
         <section class="experience-description-container">
+            <div class="SSC-2009-descript">
+                <span class="exp-title">SSC-2009</span>
+                <span class="exp-date">//Feb 2008-Jun 2009</span>
+                <p class="exp-position">SSC-Something</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
+            <div class="HSC-2011-descript">
+                <span class="exp-title">HSC-2011</span>
+                <span class="exp-date">//Jun 2011-Sept 2014</span>
+                <p class="exp-position">HSC-Something</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
+            <div class="Present-descript">
+                <span class="exp-title">2011-Pesent</span>
+                <span class="exp-date">//Jun 2011-Present</span>
+                <p class="exp-position">Do-Something</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
+            <div class="Adobe-descript">
+                <span class="exp-title">Adobe</span>
+                <span class="exp-date">//Feb 2011-Jun 2012</span>
+                <p class="exp-position">Adobe-Chiken-Chaser</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
+            <div class="Microsoft-descript">
+                <span class="exp-title">Microsoft</span>
+                <span class="exp-date">//Feb 2012-Jun 2014</span>
+                <p class="exp-position">Front End Dev</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
+            <div class="Endava-descript">
+                <span class="exp-title">Endava</span>
+                <span class="exp-date">//Feb 2014-Happily Ever After</span>
+                <p class="exp-position">Pokemon chaser</p>
+                <p class="exp-details">Lorem ipsum dolor sit amet, prima abhorreant vim an. Quo elitr theophrastus an, hinc natum sit at, cu rebum accusamus eum. Ea audire ponderum cum. Hinc semper dissentias has an. Possim facilis deleniti id mea, duo an deserunt efficiantur. Accusam copiosae consectetuer no sea. Utroque referrentur vix cu, ad modo option eos, ne veri quidam sed. Vero lorem usu cu, at dicit dolores fastidii his.
+                </p>
+            </div>
         </section>
 
     </section>
