Portfolio section updates

--- a/index.html
+++ b/index.html
@@ -109,18 +109,58 @@
 
     <section id="portfolioID" class="portfolio">
         <h1 class="page-title">PORTFOLIO</h1>
-        <ul>
-            <li><img src="http://www.placehold.it/150x300"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
-        </ul>
 
         <ul>
-            <li><img src="http://www.placehold.it/150x150"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
-            <li><img src="http://www.placehold.it/150x150"></li>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-200x200.jpg">
+                    <span class="portf-item-title small-item-title">
+                        iOS7 Music App
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-300x200.png">
+                    <span class="portf-item-title big-item-title">
+                        Website Design
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-200x200.jpg">
+                    <span class="portf-item-title small-item-title">
+                        iOS7 Music App
+                    </span>
+                </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-300x200.png">
+                    <span class="portf-item-title big-item-title">
+                        Website Design
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-200x200.jpg">
+                    <span class="portf-item-title small-item-title">
+                        iOS7 Music App
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="portf-item-container">
+                    <img src="Img/coming-soon-200x200.jpg">
+                    <span class="portf-item-title small-item-title">
+                        iOS7 Music App
+                    </span>
+                </div>
+            </li>
         </ul>
     </section>
 
