--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <title>Resume</title>
@@ -10,7 +10,7 @@
 
 <body>
 
-    <nav class="top-nav" role=navigation>
+    <nav class="top-nav">
         <ul class="top-nav-ul">
             <li class="top-nav-li"><a href="#homeID">HOME</a></li>
             <li class="top-nav-li"><a href="#aboutID">ABOUT</a></li>
@@ -22,7 +22,7 @@
         <hr class="nav-hr">
     </nav>
 
-    <nav class="left-side-nav" role="navigation">
+    <nav class="left-side-nav">
         <div class="dot-nav">
             <span>
                 <svg>
@@ -72,13 +72,13 @@
 
 
 
-    <header id="homeID" class="home" role="banner">
-        <img class="home-img" alt="placeholder" src="Img/header-pingu.jpg">
+    <header id="homeID" class="home">
+        <img class="home-img" alt="profile placeholder" src="Img/header-pingu.jpg">
         <h1 class="home-name"><b>JOHN</b> DOE</h1>
-        <footer class="home-footer">
+        <div class="home-footer">
             <p class="home-arrows-text">SCROLL DOWN TO SEE MORE</p>
             <div class="home-arrows-icon"><a href="#about">&#xab;</a></div>
-        </footer>
+        </div>
 
     </header>
 
@@ -99,10 +99,10 @@
             <h1>ACHIEVEMENTS</h1>
             <br>
             <ul>
-                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
-                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
-                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
-                <li><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTz-9DyxIvSBQWgaCF-kxnckbiPRrC758f-aigoKb8YmK0DIdmE"></li>
+                <li><img src="Img/header-pingu.jpg" alt="place holder pingu"></li>
+                <li><img src="Img/header-pingu.jpg" alt="place holder pingu"></li>
+                <li><img src="Img/header-pingu.jpg" alt="place holder pingu"></li>
+                <li><img src="Img/header-pingu.jpg" alt="place holder pingu"></li>
             </ul>
         </section>
     </section>
@@ -113,7 +113,7 @@
         <ul>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-200x200.jpg">
+                    <img src="Img/coming-soon-200x200.jpg" alt="portfolio place holder">
                     <span class="portf-item-title small-item-title">
                         iOS7 Music App
                     </span>
@@ -121,7 +121,7 @@
             </li>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-300x200.png">
+                    <img src="Img/coming-soon-300x200.png" alt="portfolio place holder">
                     <span class="portf-item-title big-item-title">
                         Website Design
                     </span>
@@ -129,7 +129,7 @@
             </li>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-200x200.jpg">
+                    <img src="Img/coming-soon-200x200.jpg" alt="portfolio place holder">
                     <span class="portf-item-title small-item-title">
                         iOS7 Music App
                     </span>
@@ -139,7 +139,7 @@
         <ul>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-300x200.png">
+                    <img src="Img/coming-soon-300x200.png" alt="portfolio place holder">
                     <span class="portf-item-title big-item-title">
                         Website Design
                     </span>
@@ -147,7 +147,7 @@
             </li>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-200x200.jpg">
+                    <img src="Img/coming-soon-200x200.jpg" alt="portfolio place holder">
                     <span class="portf-item-title small-item-title">
                         iOS7 Music App
                     </span>
@@ -155,7 +155,7 @@
             </li>
             <li>
                 <div class="portf-item-container">
-                    <img src="Img/coming-soon-200x200.jpg">
+                    <img src="Img/coming-soon-200x200.jpg" alt="portfolio place holder">
                     <span class="portf-item-title small-item-title">
                         iOS7 Music App
                     </span>
@@ -576,7 +576,7 @@
     </section>
 
     <footer id="contactID" class="contact" role="contentinfo">
-        <adress>
+        <section>
             <h1 class="page-title">CONTACT</h1>
             <div class="form">
                 <ul>
@@ -612,7 +612,7 @@
                     </li>
                 </ul>
             </div>
-        </adress>
+        </section>
     </footer>
 
     <!--    SCRIPTS  HERE    -->
